    Benjamin Coddington for the patches.

    Don't delete notes in mod_webauth after using them for authentication
    in case the authentication is happening in a subrequest and the parent
    request has not yet completed.  Deleting the note could cause two
    redirects to WebLogin due to an ordering issue when processing notes
    and subrequests.  Patch from Benjamin Coddington.

    Be even more thorough in telling browsers not to cache responses from
    WebLogin, redirects and logout pages from mod_webauth, and any page
    marked with WebAuthDontCache.  Add private and max-age=0 to the
    existing Cache-Control headers, add Vary: *, and (for WebLogin pages)
    set an expiration time in the past.

    webauth_keyring_write and webauth_keyring_auto_update now lock the
    keyring, using a separate lock file named by appending ".lock" to the
    name of the keyring.  This applies to the keyrings used by
    mod_webauth, mod_webkdc, and the wa_keyring utility and ensures that
    only one process attempts to update a keyring at the same time.  These
    functions continue to use atomic replacement on all writes, and no
    locks are used for reading the keyring.

    WebAuth keyring updates via either mod_webauth's and mod_webkdc's
    auto-update support or via wa_keyring now preserve the keyring
    ownership and permissions where possible, with the exception that the
    permissions are not preserved if the old permissions included group
    access and the group ownership could not be preserved.

    Use the authenticated identity returned by the WebKDC as the username
    for multifactor authentication in WebLogin rather than preserving what
    the user originally typed.  The WebKDC may have done Kerberos
    canonicalization and aname to localname mapping.

    The WebAuth Kerberos API now supports Kerberos password change via the
    remctl protocol, which is more robust than the kpasswd protocol when